# rss_subscriber

./: PKGBUILD
include/: config.h  feed_gather.h  url_list.h
src/: CMakeLists.txt  config.c  feed_gather.c  main.c  url_list.c
tests/include/: minunit.h
tests/src/: CMakeLists.txt  test.c
